--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          </div>
       </div>
       <div class="container-fluid containerBrands">
-         <div class="container text-center">
+         <div class="container">
             <h3 class="containerTitle">Principais Marcas</h3>
             <div class="carouselBrands">
                <div class="card carcardCarouselBrands shadowBox">
@@ -100,12 +100,12 @@
             </div>
          </div>
       </div>
-      <div class="container-fluid container00">
+      <div class="container-fluid containerContent">
          <div class="container text-center">
             <h3 class="mt-5 containerTitle">Novidades da semana</h3>
             <div class="containerCars">
                <div class="card cardCar">
-                  <img src="./assets/img/velar/1.jpg" class="card-img-top" alt="Range Rover Velar" />
+                  <img src="./assets/img/velar/1.jpg" class="card-img-top cardCarImage" alt="Range Rover Velar" />
                   <div class="carContainer">
                      <h5 class="card-title carTitle">Range Rover Velar</h5>
                      <p class="card-text carPrice">R$499.999</p>
@@ -130,7 +130,7 @@
                   </div>
                </div>
                <div class="card cardCar">
-                  <img src="./assets/img/urus/1.jpg" class="card-img-top" alt="Lamborghini Urus" />
+                  <img src="./assets/img/urus/1.jpg" class="card-img-top cardCarImage" alt="Lamborghini Urus" />
                   <div class="carContainer">
                      <h5 class="card-title carTitle">Lamborghini Urus</h5>
                      <p class="card-text carPrice">R$3.900.000</p>
@@ -155,7 +155,7 @@
                   </div>
                </div>
                <div class="card cardCar">
-                  <img src="./assets/img/rs7/1.jpg" class="card-img-top" alt="Audi RS7" />
+                  <img src="./assets/img/rs7/1.jpg" class="card-img-top cardCarImage" alt="Audi RS7" />
                   <div class="carContainer">
                      <h5 class="card-title carTitle">Audi RS7</h5>
                      <p class="card-text carPrice">R$369.999</p>
@@ -182,7 +182,31 @@
             </div>
          </div>
       </div>
-
+      <div class="container-fluid containerContent containerSalesman">
+         <div class="container">
+            <h4 class="containerTitle">Nossos Vendedores</h4>
+            <div class="salesman">
+               <div class="salesmanImage salesmanImage--default"></div>
+               <h5 class="salesmanName">Bruno Arruda</h5>
+               <h5 class="salesmanDesc">Vendedor</h5>
+               <div class="salesmanSocial">
+                  <span><i class="bi bi-instagram"></i></span>
+                  <span><i class="bi bi-linkedin"></i></span>
+                  <span><i class="bi bi-github"></i></span>
+               </div>
+            </div>
+            <div class="salesman">
+               <div class="salesmanImage salesmanImage--tcar"></div>
+               <h5 class="salesmanName">Tcar</h5>
+               <h5 class="salesmanDesc">Vendedor</h5>
+               <div class="salesmanSocial">
+                  <span><i class="bi bi-instagram"></i></span>
+                  <span><i class="bi bi-linkedin"></i></span>
+                  <span><i class="bi bi-tiktok"></i></span>
+               </div>
+            </div>
+         </div>
+      </div>
       <!-- Bootstrap -->
       <script
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
