Section popular cars

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       </div>
       <div class="container-fluid containerContent">
          <div class="container text-center">
-            <h3 class="mt-5 containerTitle">Novidades da semana</h3>
-            <div class="containerCars">
+            <h3 class="containerTitle mt-3">Novidades da semana</h3>
+            <div class="containerCars carouselCars">
                <div class="card cardCar">
                   <img src="./assets/img/velar/1.jpg" class="card-img-top cardCarImage" alt="Range Rover Velar" />
                   <div class="carContainer">
@@ -117,7 +117,7 @@
                   <div class="carContainer">
                      <div class="carContent">
                         <span class="carSpec">Carroceria:</span>
-                        <p class="card-text">Utilitário esportivo</p>
+                        <p class="card-text">SUV</p>
                      </div>
                      <div class="carContent">
                         <span class="carSpec">Câmbio:</span>
@@ -142,7 +142,7 @@
                   <div class="carContainer">
                      <div class="carContent">
                         <span class="carSpec">Carroceria:</span>
-                        <p class="card-text">Utilitário esportivo</p>
+                        <p class="card-text">SUV</p>
                      </div>
                      <div class="carContent">
                         <span class="carSpec">Câmbio:</span>
@@ -174,6 +174,113 @@
                         <p class="card-text">Automático</p>
                      </div>
                      <div class="carContent">
+                        <span class="carSpec">Combustível:</span>
+                        <p class="card-text">Gasolina</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="container-fluid containerContent containerPopular">
+         <div class="container text-center">
+            <h4 class="containerTitle pt-3" id="popularTitle">Carros em Destaque</h4>
+            <div class="containerCars">
+               <div class="card cardCar cardPopularCar cardPopularCar">
+                  <img src="./assets/img/velar/1.jpg" class="card-img-top cardCarImage cardPopularCarImage" alt="Range Rover Velar" />
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carTitle popularCarTitle">Range Rover Velar</h5>
+                     <p class="card-text carPrice popularCarPrice">R$499.999</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carColor popularCarColor">Cinza</h5>
+                     <p class="card-text carYear popularCarYear">2017</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Carroceria:</span>
+                        <p class="card-text">SUV</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Câmbio:</span>
+                        <p class="card-text">Automático</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Combustível:</span>
+                        <p class="card-text">Gasolina</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card cardCar cardPopularCar">
+                  <img src="./assets/img/urus/1.jpg" class="card-img-top cardCarImage cardPopularCarImage" alt="Lamborghini Urus" />
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carTitle popularCarTitle">Lamborghini Urus</h5>
+                     <p class="card-text carPrice popularCarPrice">R$3.900.000</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carColor popularCarColor">Azul</h5>
+                     <p class="card-text carYear popularCarYear">2021</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Carroceria:</span>
+                        <p class="card-text">SUV</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Câmbio:</span>
+                        <p class="card-text">Automático</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Combustível:</span>
+                        <p class="card-text">Gasolina</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card cardCar cardPopularCar">
+                  <img src="./assets/img/rs7/1.jpg" class="card-img-top cardCarImage cardPopularCarImage" alt="Audi RS7" />
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carTitle popularCarTitle">Audi RS7</h5>
+                     <p class="card-text carPrice popularCarPrice">R$369.999</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carColor popularCarColor">Preto</h5>
+                     <p class="card-text carYear popularCarYear">2021</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Carroceria:</span>
+                        <p class="card-text">Sedã</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Câmbio:</span>
+                        <p class="card-text">Automático</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Combustível:</span>
+                        <p class="card-text">Gasolina</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card cardCar cardPopularCar cardPopularCar">
+                  <img src="./assets/img/jaguar/1.jpg" class="card-img-top cardCarImage cardPopularCarImage" alt="Jaguar E-Pace" />
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carTitle popularCarTitle">Jaguar E-Pace</h5>
+                     <p class="card-text carPrice popularCarPrice">R$369.999</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <h5 class="card-title carColor popularCarColor">Branco</h5>
+                     <p class="card-text carYear popularCarYear">2020</p>
+                  </div>
+                  <div class="carContainer popularCarContainer">
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Carroceria:</span>
+                        <p class="card-text">SUV</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec">Câmbio:</span>
+                        <p class="card-text">Automático</p>
+                     </div>
+                     <div class="carContent popularCarContent">
                         <span class="carSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
