--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                   </div>
                   <div class="carContainer popularCarContainer">
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Carroceria:</span>
-                        <p class="card-text">SUV</p>
-                     </div>
-                     <div class="carContent popularCarContent">
-                        <span class="carSpec">Câmbio:</span>
+                        <span class="carSpec popularCarSpec">Câmbio:</span>
                         <p class="card-text">Automático</p>
                      </div>
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Combustível:</span>
+                        <span class="carSpec popularCarSpec">Carroceria:</span>
+                        <p class="card-text">SUV</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec popularCarSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
@@ -223,15 +223,15 @@
                   </div>
                   <div class="carContainer popularCarContainer">
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Carroceria:</span>
-                        <p class="card-text">SUV</p>
-                     </div>
-                     <div class="carContent popularCarContent">
-                        <span class="carSpec">Câmbio:</span>
+                        <span class="carSpec popularCarSpec">Câmbio:</span>
                         <p class="card-text">Automático</p>
                      </div>
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Combustível:</span>
+                        <span class="carSpec popularCarSpec">Carroceria:</span>
+                        <p class="card-text">SUV</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec popularCarSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
@@ -248,15 +248,15 @@
                   </div>
                   <div class="carContainer popularCarContainer">
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Carroceria:</span>
-                        <p class="card-text">Sedã</p>
-                     </div>
-                     <div class="carContent popularCarContent">
-                        <span class="carSpec">Câmbio:</span>
+                        <span class="carSpec popularCarSpec">Câmbio:</span>
                         <p class="card-text">Automático</p>
                      </div>
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Combustível:</span>
+                        <span class="carSpec popularCarSpec">Carroceria:</span>
+                        <p class="card-text">Sedã</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec popularCarSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
@@ -273,15 +273,15 @@
                   </div>
                   <div class="carContainer popularCarContainer">
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Carroceria:</span>
-                        <p class="card-text">SUV</p>
-                     </div>
-                     <div class="carContent popularCarContent">
-                        <span class="carSpec">Câmbio:</span>
+                        <span class="carSpec popularCarSpec">Câmbio:</span>
                         <p class="card-text">Automático</p>
                      </div>
                      <div class="carContent popularCarContent">
-                        <span class="carSpec">Combustível:</span>
+                        <span class="carSpec popularCarSpec">Carroceria:</span>
+                        <p class="card-text">SUV</p>
+                     </div>
+                     <div class="carContent popularCarContent">
+                        <span class="carSpec popularCarSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
