Footer and categories section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                   <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="logo" class="headerLogo" /></a>
                   <button
                      class="navbar-toggler"
+                     id="headerButton"
                      type="button"
                      data-bs-toggle="collapse"
                      data-bs-target="#navbarSupportedContent"
@@ -43,7 +44,7 @@
                      aria-expanded="false"
                      aria-label="Toggle navigation"
                   >
-                     <span class="navbar-toggler-icon"></span>
+                     <span class="customToggler"><i class="bi bi-list"></i></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -59,8 +60,8 @@
                         </li>
                      </ul>
                      <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Lamborghini Urus..." aria-label="Search" />
-                        <button class="btn btn-outline-warning" type="submit">Buscar</button>
+                        <input class="form-control me-2 headerSearch" type="search" placeholder="Lamborghini Urus..." aria-label="Search" />
+                        <button class="btn btn-outline-light" type="submit">Buscar</button>
                      </form>
                   </div>
                </nav>
@@ -178,6 +179,41 @@
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="container-fluid containerContent containerCategories">
+         <div class="container text-center">
+            <h3 class="containerTitle">Categorias</h3>
+            <div class="categories mt-4">
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">Hatch</figcaption>
+               </div>
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">Sedan</figcaption>
+               </div>
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">SUV</figcaption>
+               </div>
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">Coupê</figcaption>
+               </div>
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">Conversível</figcaption>
+               </div>
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">Caminhonete</figcaption>
+               </div>
+               <div class="category">
+                  <img src="./assets/img/default.png" alt="" class="categoryImage" />
+                  <figcaption class="categoryTitle">Wagon</figcaption>
                </div>
             </div>
          </div>
@@ -312,6 +348,21 @@
                   <span><i class="bi bi-tiktok"></i></span>
                </div>
             </div>
+         </div>
+      </div>
+      <div class="container-fluid containerContent containerFooter">
+         <div class="container text-center">
+            <footer class="footer">
+               <div class="footerContent">
+                  <h4 class="footerTitle">Salford</h4>
+                  <span class="footerCopy">&copy;2022</span>
+               </div>
+               <div class="footerContent">
+                  <span><i class="bi bi-instagram footerIcon"></i>Instagram</span>
+                  <span><i class="bi bi-linkedin footerIcon"></i>Linkedin</span>
+                  <span><i class="bi bi-github footerIcon"></i>GitHub</span>
+               </div>
+            </footer>
          </div>
       </div>
       <!-- Bootstrap -->
