Finishing home page & adding car page

--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
+                  <div class="carContainer popularCarContainer popularCarButton">
+                     <span class="carSpec popularCarSpec"
+                        ><a href="./public/car.html"><button class="carContentButton">Ver carro</button></a></span
+                     >
+                  </div>
                </div>
                <div class="card cardCar cardPopularCar">
                   <img src="./assets/img/urus/1.jpg" class="card-img-top cardCarImage cardPopularCarImage" alt="Lamborghini Urus" />
@@ -270,6 +275,11 @@
                         <span class="carSpec popularCarSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
+                  </div>
+                  <div class="carContainer popularCarContainer popularCarButton">
+                     <span class="carSpec popularCarSpec"
+                        ><a href="./public/car.html"><button class="carContentButton">Ver carro</button></a></span
+                     >
                   </div>
                </div>
                <div class="card cardCar cardPopularCar">
@@ -296,6 +306,11 @@
                         <p class="card-text">Gasolina</p>
                      </div>
                   </div>
+                  <div class="carContainer popularCarContainer popularCarButton">
+                     <span class="carSpec popularCarSpec"
+                        ><a href="./public/car.html"><button class="carContentButton">Ver carro</button></a></span
+                     >
+                  </div>
                </div>
                <div class="card cardCar cardPopularCar cardPopularCar">
                   <img src="./assets/img/jaguar/1.jpg" class="card-img-top cardCarImage cardPopularCarImage" alt="Jaguar E-Pace" />
@@ -320,6 +335,11 @@
                         <span class="carSpec popularCarSpec">Combustível:</span>
                         <p class="card-text">Gasolina</p>
                      </div>
+                  </div>
+                  <div class="carContainer popularCarContainer popularCarButton">
+                     <span class="carSpec popularCarSpec"
+                        ><a href="./public/car.html"><button class="carContentButton">Ver carro</button></a></span
+                     >
                   </div>
                </div>
             </div>
@@ -365,6 +385,7 @@
             </footer>
          </div>
       </div>
+
       <!-- Bootstrap -->
       <script
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
